--- a/TP2/makefile
+++ b/TP2/makefile
@@ -9,20 +9,14 @@ GTKLIBS:=$(shell pkg-config --libs gtk+-3.0)
 
 all: convex
 
-convex: convex.o points.o pile.o quicksort.o
-	$(LD) convex.o points.o pile.o quicksort.o $(GTKLIBS) $(LIBS) -lm -o convex
+convex: convex.o points.o
+	$(LD) convex.o points.o $(GTKLIBS) $(LIBS) -o convex
 
 convex.o: convex.c
 	$(CC) -c $(CFLAGS) $(GTKCFLAGS) convex.c -o convex.o
 
 points.o: points.c points.h 
 	$(CC) -c $(CFLAGS) $(GTKCFLAGS) points.c -o points.o
-
-pile.o: pile.c pile.h
-	$(CC) -c $(CFLAGS) $(GTKCFLAGS) pile.c -o pile.o
-
-quicksort.o: quicksort.c quicksort.h
-	$(CC) -c $(CFLAGS) $(GTKCFLAGS) quicksort.c -o quicksort.o
 
 clean:
 	rm -f convex convex.o points.o pile.o quicksort.o
