--- a/TP2/Makefile
+++ b/TP2/Makefile
@@ -9,14 +9,17 @@ GTKLIBS:=$(shell pkg-config --libs gtk+-3.0)
 
 all: convex
 
-convex: convex.o points.o
-	$(LD) convex.o points.o $(GTKLIBS) $(LIBS) -o convex
+convex: convex.o points.o pile.o
+	$(LD) convex.o points.o  pile.o $(GTKLIBS) $(LIBS) -lm -o convex
 
 convex.o: convex.c
 	$(CC) -c $(CFLAGS) $(GTKCFLAGS) convex.c -o convex.o
 
 points.o: points.c points.h 
 	$(CC) -c $(CFLAGS) $(GTKCFLAGS) points.c -o points.o
+
+pile.o: pile.c pile.h
+	$(CC) -c $(CFLAGS) $(GTKCFLAGS) pile.c -o pile.o
 
 clean:
 	rm -f convex convex.o points.o
